...
                  width: 600,
                ),
                const SizedBox(
                  height: 20,
                ),
                const Text(
                  "You are in ePOS now",
                  style: TextStyle(
                      fontSize: 23,
                      color: Colors.deepOrange,
                      fontWeight: FontWeight.bold),
                ),
                const SizedBox(
...
                ),
                const SizedBox(
                  height: 20,
                ),

                InkWell(
                  key: const Key("next"),
                  onTap: () {
                    Navigator.pushAndRemoveUntil(
                        context,
                        MaterialPageRoute(builder: (_) => const UserName()),
                        (route) => false);
                    // Navigator.of(context).pushAndRemoveUntil(
...
